[gd_scene load_steps=7 format=3 uid="uid://bx27qcn8ups8x"]

[ext_resource type="Script" path="res://levels/level_2.gd" id="1_0oewt"]
[ext_resource type="Texture2D" uid="uid://ctwh54cqyd7di" path="res://art/background5.png" id="1_fla8c"]
[ext_resource type="PackedScene" uid="uid://d042qadhulha7" path="res://scenes/global/hud_levels.tscn" id="1_s3f4a"]
[ext_resource type="Shader" path="res://levels/level_1.gdshader" id="2_tw364"]
[ext_resource type="PackedScene" uid="uid://dpgvyj08o5pe1" path="res://models/characters/player.tscn" id="4_nld8m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_66fpr"]
shader = ExtResource("2_tw364")
shader_parameter/scroll_speed = null

[node name="Level2" type="Node2D"]
script = ExtResource("1_0oewt")

[node name="BackGround" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_66fpr")
offset_left = -2.99988
offset_top = 2.0
offset_right = 1277.0
offset_bottom = 722.0
scale = Vector2(0.896094, 0.904861)
texture = ExtResource("1_fla8c")

[node name="Player" parent="." instance=ExtResource("4_nld8m")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(389, 543)

[node name="HudLevels" parent="." instance=ExtResource("1_s3f4a")]

[node name="TimerRemain" type="Timer" parent="."]

[connection signal="timeout" from="TimerRemain" to="." method="_on_timer_remain_timeout"]
